--- a/home.css
+++ b/home.css
@@ -1,47 +1,68 @@
+*{
+    outline: none;
+}
 body {
     background-image: url("Tats.png");
-    background-size: 100%;
-    background-repeat: no-repeat;
-    text-align: center;
-    font-size: 150%;
-    color: whitesmoke;
-    overflow: hidden;
-
-}
-.Sign{
-    text-align: right;
-    font-style: italic;
-}
-
-.card{
-    display: grid;
-    grid-template-columns: 100px;
-    grid-template-rows: 90px 90px;
-    grid-template-areas: "image" "text" "stats";
-    
-    font-family: roboto;
-    border-radius: 18px;
-    background:whitesmoke;
-    box-shadow: 5px 5px 5px black;
-    text-align:center;
-    width: 300px;
-
-}
-.card-image {
-    grid-area: image;
-    background-image:url("skeleton.png");
-    border-top-left-radius: 30px;
-    border-top-right-radius: 50px;
     background-size: cover;
+    background-repeat: no-repeat;
+    height: 100vh;
+    font-size: 150%;
+    color: white;
+    overflow: hidden;
+    font-family: Century 'FranklinGothic Medium';
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
-.card-text {
-    grid-area: text;
-    margin: 25px;
-}
-.card-text .date{
-    color: black;
-    font-size: 13px;
+ul{
+    float: center;
+    list-style-type: none;
+    margin-top: 25px;
 
+}
+ul li{
+    display: inline;
+}
+ul li a{
+    text-decoration: none;
+    color: white;
+    padding: 5px 20px;
+    border:1px solid transparent
+}
+ul li a:hover{
+    background-color: red;
+    color: black;
+}
+.main{
+    max-width: 1200px;
+    margin: auto;
+}
+.main ul{
+    display: inline-flex;
+    list-style: none;
+    color: gold;
+}
+.main ul li{
+    width: 120px;
+    margin: 15px;
+    color: gold;
+}
+
+.title h1{
+    color: gold;
+    font-size:70px;
+    text-align: center;
+
+}
+.button {
+    position: absolute;
+    top: 60%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+.btn{
+    position: absolute;
+    transform: translate((-50%, -50%));
 }
 .grid-text{
     grid-area: text;
@@ -49,3 +70,97 @@ body {
 .card-stats {
     grid-area: stats;
 }
+
+
+
+
+
+
+
+
+.FAQ{
+    color: gold;
+    font-size: 20px;
+}
+
+
+section{
+    width: 100%;
+    height: border-box;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+}
+.container{
+    width: 100%;
+    max-width:80rem ;
+    margin: 0 auto;
+    padding: 1.5rem;
+
+}
+.FAQ-item{
+    background-color:black;
+    margin-bottom: 1rem;
+    padding: 1rem;
+    box-shadow: red;
+    ;
+}
+
+.answer p{
+    color:greenyellow
+}
+
+
+.about{
+    color: gold;
+
+}
+.cards-list {
+    z-index: 0;
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+  }
+  .card .card_image {
+    width: inherit;
+    height: inherit;
+    border-radius: 40px;
+  }
+  .card .card_image img {
+    width: inherit;
+    height: inherit;
+    border-radius: 40px;
+    object-fit: cover;
+  }
+  .card .card_title {
+    text-align: center;
+    border-radius: 0px 0px 40px 40px;
+    font-family: sans-serif;
+    font-weight: bold;
+    font-size: 30px;
+    margin-top: -80px;
+    height: 40px;
+  }
+  
+
+  .details{
+      position: absolute;
+      top: 50%;
+      transform: translateY();
+      width: 100%;
+      padding: 0 20px;
+  }
+  .contact-form{
+      max-width:550px;
+      margin: 0 auto;
+      background: black;
+      padding: 30px;
+      border-radius: 5px;
+      display: flex;
+      box-shadow: 0 0 10px;
+      float: center;
+  }
+  .contacts{
+      color: gold;
+  }
